[feat] fix mobile layout problems

--- a/src/components/Layout/LayoutMobile/LayoutMobile.module.scss
+++ b/src/components/Layout/LayoutMobile/LayoutMobile.module.scss
@@ -1,9 +1,10 @@
 @import 'src/styles/_variables.scss';
 
 .children {
-  height: 90vh;
-  width: 100vw;
-  overflow-y: scroll;
+  // height: 100vh;
+  // width: 100vw;
+
+  // overflow-y: scroll;
   // box-sizing: border-box;
   // box-sizing: content-box;
 }
