--- a/src/components/Layout/MobileBottomMenu/MobileBottomMenu.module.scss
+++ b/src/components/Layout/MobileBottomMenu/MobileBottomMenu.module.scss
@@ -1,13 +1,12 @@
 @import 'src/styles/_variables.scss';
 
 .mobileBottomMenu {
-  height: $top-nav__height;
-  height: 10vh;
-  background: $background-color;
+  height: $mobile-menu-height;
+  position: fixed;
+  bottom: 0;
+  background: #fff;
   border-top: 1px solid $border-color;
 
-  position: sticky;
-  position: absolute;
   width: 100vw;
   bottom: 0;
   z-index: 1;
@@ -29,7 +28,7 @@ $padding: 20px;
 }
 
 .icon {
-  font-size: 30px;
+  font-size: 24px;
   color: $text-color--secondary;
 }
 .iconActive {
