--- a/src/pages/ModifyBusinessCard/ModifyBusinessCard.module.scss
+++ b/src/pages/ModifyBusinessCard/ModifyBusinessCard.module.scss
@@ -2,8 +2,6 @@
 
 .businessCardPreview {
   margin-bottom: 24px;
-  position: sticky;
-  top: $top-nav__height;
   z-index: 1;
 }
 
