--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,6 +20,8 @@ $desktop-sider__pointer-width: 3px;
 $desktop-sider__icon-size: 20px;
 $desktop-sider__icon-margin: 12px;
 
+$mobile-menu-height: 50px;
+
 $sider-width--expanded: 270px;
 $sider-width--collapsed: $desktop-sider__pointer-width + ($desktop-sider__icon-margin * 2) + $desktop-sider__icon-size;
 
